--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 	<nav id="Topbar">
 		<ul style="list-style-type:none">
 			<li>
-				<a href="">About</a>
-				<a href="">Tours</a>
+				<a href="About.html">About</a>
+				<a href="Tours.html">Tours</a>
 				<a href="">Logo</a>
-				<a href="">Music</a>
-				<a href="">Store</a>
+				<a href="Music.html">Music</a>
+				<a href="Store.html">Store</a>
 			</li>
 		</ul>
 	</nav>
-<a href=""><img class="logo" src="assets/logo.jpg"></a>
+<a href="index.html"><img class="logo" src="assets/logo.jpg"></a>
 	
 <nav id="SocmedB">
 		<ul style="list-style-type:none">
