--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 		<ul style="list-style-type:none">
 			<li>
 				
-				<a href=""><img class="Soclogo" src="assets/youtube.png"></a>
-				<a href=""><img class="Soclogo" src="assets/facebook.png"></a>
+				<a href="https://www.youtube.com/user/pendulumlive"><img class="Soclogo" src="assets/youtube.png"></a>
+				<a href="https://www.facebook.com/pendulum/"><img class="Soclogo" src="assets/facebook.png"></a>
 			</li>
 		</ul>
 	</nav>
 <nav id="SocmedT">
 		<ul style="list-style-type:none">
 			<li>
-				<a href=""><img class="Soclogo" src="assets/twitter.png"></a>
-				<a href=""><img class="Soclogo" src="assets/spotify.png"></a>
+				<a href="https://twitter.com/pendulum"><img class="Soclogo" src="assets/twitter.png"></a>
+				<a href="https://open.spotify.com/artist/7MqnCTCAX6SsIYYdJCQj9B"><img class="Soclogo" src="assets/spotify.png"></a>
 				
 			</li>
 		</ul>
