--- a/About.html
+++ b/About.html
@@ -4,12 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Web Authoring Assessment</title>
+<script src="js/Script.js"></script>
+
 <link rel="stylesheet" href="css/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 </head>
 
 <body background="assets/pendulum-full-band.jpg">
+
 <div>
 	<a href="" id="Demo">Demo</a>
 	<nav id="Topbar">
@@ -17,7 +20,7 @@
 			<li>
 				<a href="About.html">About</a>
 				<a href="Tours.html">Tours</a>
-				<a href="">Logo</a>
+				<a href="index.html">Main</a>
 				<a href="Music.html">Music</a>
 				<a href="Store.html">Store</a>
 			</li>
@@ -29,22 +32,42 @@
 		<ul style="list-style-type:none">
 			<li>
 				
-				<a href=""><img class="Soclogo" src="assets/youtube.png"></a>
-				<a href=""><img class="Soclogo" src="assets/facebook.png"></a>
+				<a href="https://www.youtube.com/user/pendulumlive"><img class="Soclogo" src="assets/youtube.png"></a>
+				<a href="https://www.facebook.com/pendulum/"><img class="Soclogo" src="assets/facebook.png"></a>
 			</li>
 		</ul>
 	</nav>
 <nav id="SocmedT">
 		<ul style="list-style-type:none">
 			<li>
-				<a href=""><img class="Soclogo" src="assets/twitter.png"></a>
-				<a href=""><img class="Soclogo" src="assets/spotify.png"></a>
+				<a href="https://twitter.com/pendulum"><img class="Soclogo" src="assets/twitter.png"></a>
+				<a href="https://open.spotify.com/artist/7MqnCTCAX6SsIYYdJCQj9B"><img class="Soclogo" src="assets/spotify.png"></a>
 				
 			</li>
 		</ul>
 	</nav>
 	
 </div>
+
+<div>
+<img id = "aboutchange" class="aboutpic abpp" src="assets/logo2.jpg">
+<p id="abouttext"> Click an image below to learn more about the current members of the band </p>
+
+<ul style="list-style-type:none">
+	<li id="Aboutpp">
+		<img class="aboutpic" src="assets/Rob.jpg" onclick="RobFunction()">
+		<img class="aboutpic" src="assets/Gareth.jpg" onclick="GarethFunction()">
+		<img class="aboutpic" src="assets/Peredur.jpg" onclick="PeredurFunction()">
+		<img class="aboutpic" src="assets/KJ.jpg" onclick="KJFunction()">
+		<img class="aboutpic" src="assets/DJ.jpg" onclick="DJFunction()">
+		
+		
+		
+		</li>
+</ul>
+
+</div>
+
 
 
 
