--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<li>
 				<a href="About.html">About</a>
 				<a href="Tours.html">Tours</a>
-				<a href="">Logo</a>
+				<a href="index.html">Main</a>
 				<a href="Music.html">Music</a>
 				<a href="Store.html">Store</a>
 			</li>
