--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
 
 <div>
 <img id = "aboutchange" class="aboutpic abpp" src="assets/logo2.jpg">
-<p id="abouttext"> Click an image below to learn more about the current members of the band </p>
+<p id="abouttext" class="textbox atext"> Click an image below to learn more about the current members of the band </p>
 
 <ul style="list-style-type:none">
 	<li id="Aboutpp">
