--- a/Store.html
+++ b/Store.html
@@ -55,7 +55,7 @@
 <section>
 
 <img class="textbox merch1" src="assets/Merch1.jpg">
-<p class="textbox merch1 textdrop">Black Embroidered Jumper - £24 </p>
+<p class="textbox merch1 td1 textdrop">Black Embroidered Jumper - £24 </p>
 
 <p class="merchb1"><button onclick="MB1SFunction()" type="button">-</button></p>
 <div id="MB1" class="textbox merchb1 mb11 pad"></div>		
@@ -64,7 +64,7 @@
 
 
 <img class="textbox merch2" src="assets/Merch2.jpg">
-<p class="textbox merch2 textdrop">Dye Logo T Shirt - £15 </p>
+<p class="textbox merch2 td2 textdrop">Dye Logo T Shirt - £15 </p>
 
 
 <p class="merchb2"><button onclick="MB2SFunction()" type="button">-</button></p>
@@ -75,7 +75,7 @@
 
 
 <img class="textbox merch3" src="assets/Merch3.jpg">
-<p class="textbox merch3 textdrop">Chrome Logo Flag - £17 </p>
+<p class="textbox merch3 td3 textdrop">Chrome Logo Flag - £17 </p>
 
 <p class="merchb3"><button onclick="MB3SFunction()" type="button">-</button></p>
 <div id="MB3" class="textbox merchb3 mb31 pad"></div>		
@@ -89,7 +89,7 @@
 		<div id="Bas3" class="textbox Bas3"></div>
 		<div id="Bas4" class="textbox Bas4"></div>
 
-
+<a href="Checkout.html" class="textbox check1">Checkout</a>
 
 </section>
 </body>
