--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 			</li>
 		</ul>
 	</nav>
-<a href="index.html"><img class="logo" src="assets/logo.jpg"></a>
+<a href="index.html"><img class="logo" src="assets/logo.jpg" alt="Band Logo"></a>
 	
 <nav id="SocmedB">
 		<ul style="list-style-type:none">
 			<li>
 				
-				<a href="https://www.youtube.com/user/pendulumlive"><img class="Soclogo" src="assets/youtube.png"></a>
-				<a href="https://www.facebook.com/pendulum/"><img class="Soclogo" src="assets/facebook.png"></a>
+				<a href="https://www.youtube.com/user/pendulumlive"><img class="Soclogo" src="assets/youtube.png" alt="Youtube"></a>
+				<a href="https://www.facebook.com/pendulum/"><img class="Soclogo" src="assets/facebook.png" alt="Facebook"></a>
 			</li>
 		</ul>
 	</nav>
 <nav id="SocmedT">
 		<ul style="list-style-type:none">
 			<li>
-				<a href="https://twitter.com/pendulum"><img class="Soclogo" src="assets/twitter.png"></a>
-				<a href="https://open.spotify.com/artist/7MqnCTCAX6SsIYYdJCQj9B"><img class="Soclogo" src="assets/spotify.png"></a>
+				<a href="https://twitter.com/pendulum"><img class="Soclogo" src="assets/twitter.png" alt="Twitter"></a>
+				<a href="https://open.spotify.com/artist/7MqnCTCAX6SsIYYdJCQj9B"><img class="Soclogo" src="assets/spotify.png" alt="Spotify"></a>
 				
 			</li>
 		</ul>
