--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 
 
 	
-	<iframe id="exampvid" width="1120" height="630" src="https://www.youtube.com/embed/8mYd2X_9rrs?rel=0" frameborder="0" allowfullscreen></iframe>
+	<iframe id="exampvid" width="1120" height="630" src="https://www.youtube.com/embed/8mYd2X_9rrs?rel=0" allowfullscreen></iframe>
 </body>
 </html>
