--- a/Checkout.html
+++ b/Checkout.html
@@ -14,7 +14,7 @@
 <body>
 
 <div>
-	<a href="" id="Demo">Demo + Log</a>
+	<a href="DEmo.html" id="Demo">Demo + Log</a>
 	<nav id="Topbar">
 		<ul style="list-style-type:none">
 			<li>
