--- a/Music.html
+++ b/Music.html
@@ -13,7 +13,7 @@
 
 <body>
 <div>
-	<a href="" id="Demo">Demo</a>
+	<a href="Demo.html" id="Demo">Demo + Log</a>
 	<nav id="Topbar">
 		<ul style="list-style-type:none">
 			<li>
