--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <div>
-	<a href="" id="Demo">Demo + Log</a>
+	<a href="Demo.html" id="Demo">Demo + Log</a>
 	<nav id="Topbar">
 		<ul style="list-style-type:none">
 			<li>
