--- a/Demo.html
+++ b/Demo.html
@@ -51,6 +51,6 @@
 </section>
 	
 	<iframe id="exampvid" width="1120" height="630" src="https://www.youtube.com/embed/8mYd2X_9rrs?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-	<embed src="assets/CMP1130M - Aidan Fallows - Assessment 1.pdf" width="500" height="375" type='application/pdf'>
+	<embed id="pdf" src="assets/CMP1130M - Aidan Fallows - Assessment 1.pdf" width="500" height="375" type='application/pdf'>
 </body>
 </html>
