--- a/index.html
+++ b/index.html
@@ -1,55 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Web Authoring Assessment</title>
-<link rel="stylesheet" href="css/styles.css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
+<title>Soundboard?</title>
 </head>
-
 <body>
-<div>
-	<a href="Demo.html" id="Demo">Demo + Log</a>
-	<nav id="Topbar">
-		<ul style="list-style-type:none">
-			<li>
-				<a href="About.html">About</a>
-				<a href="Tours.html">Tours</a>
-				<a href="index.html">Main</a>
-				<a href="Music.html">Music</a>
-				<a href="Store.html">Store</a>
-			</li>
-		</ul>
-	</nav>
-<a href="index.html"><img class="logo" src="assets/logo.jpg" alt="Band Logo"></a>
-	
-<nav id="SocmedB">
-		<ul style="list-style-type:none">
-			<li>
-				
-				<a href="https://www.youtube.com/user/pendulumlive"><img class="Soclogo" src="assets/youtube.png" alt="Youtube"></a>
-				<a href="https://www.facebook.com/pendulum/"><img class="Soclogo" src="assets/facebook.png" alt="Facebook"></a>
-			</li>
-		</ul>
-	</nav>
-<nav id="SocmedT">
-		<ul style="list-style-type:none">
-			<li>
-				<a href="https://twitter.com/pendulum"><img class="Soclogo" src="assets/twitter.png" alt="Twitter"></a>
-				<a href="https://open.spotify.com/artist/7MqnCTCAX6SsIYYdJCQj9B"><img class="Soclogo" src="assets/spotify.png" alt="Spotify"></a>
-				
-			</li>
-		</ul>
-	</nav>
-	
-</div>
 
+<h1>Chess Soundboard</h1>
+<p>Fuck off, this is just html, we don't need css up in this bitch</p>
+<p>Husky - Popular With Moms</p>
+<audio controls>
+    <source src="assets/HusPopWithMoms.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 
-
-
-	
-	<iframe id="exampvid" width="1120" height="630" src="https://www.youtube.com/embed/8mYd2X_9rrs?rel=0" allowfullscreen></iframe>
 </body>
-</html>
+</html
